2016-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support 'install-strip' as a universal make goal.

	* Makefile.in (install-strip): New goal; it is a dependency of...
	(subdirs): ...this subsidiary package directory collection.

2016-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Integrate mingwrt and w32api build; synchronize versions.

	* configure.ac Makefile.in: New files.

	* VERSION.m4: New file; link it, to create and maintain an identical
	copy of it, in each of the mingwrt and w32api sub-package directories.
	(__VERSION__): New macro; define and initialize it, in preparation
	for forthcoming integrated version 5.0 release.

	* aclocal.m4: New file; link it, to make it an identical copy of
	each identically named file, in each of the sub-package directories.
	(__VERSION__): New macro; include VERSION.m4 to define it.
	(__BUG_REPORT_URL__): New macro; define it.

2014-10-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Merge .hgignore from "master" branch to "legacy".

	* .hgignore: New file.

2014-10-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Import w32api-3.17 source code on "legacy" branch.

	* w32api: New directory; use w32api-3.17-2 release as baseline for
	import; once again, original CVS history is NOT preserved.

2014-10-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create "legacy" branch; import mingwrt-3.20 source code.

	* mingwrt: New directory; use mingwrt-3.20-2 release as baseline
	for import; original CVS history is NOT preserved.

2012-08-08  Earnie Boyd  <earnie@users.sourceforge.net>

	* ChangeLog: New file.
	* LICENSE: Ditto.
	* README: Ditto.
	* .gitignore: Ditto.