@@ -1,7 +1,16 @@
+build
 Makefile
 configure
-.*.swp
-*~
 autom4te.cache
+mingwrt/aclocal.m4
+mingwrt/VERSION.m4
+w32api/aclocal.m4
+w32api/VERSION.m4
+config.status
 missing
 depcomp
+.*.swp
+*.log
+*.bak
+*.o
+*~
