@@ -1,11 +1,0 @@
-# VERSION.m4 -- vim: filetype=config
-#
-# $Id$
-#
-# Non-copyrightable material; adjust the following definition, to
-# assign a common version number to each of the mingwrt and w32api
-# MinGW System Library sub-packages.
-
-m4_define([__VERSION__],[5.0])
-
-# $RCSfile$: end of file
