@@ -50,6 +50,7 @@
 
   AC_PROG_INSTALL
   AC_PROG_MKDIR_P
+  AC_PROG_LN_S
 
   MINGW_AC_MAKE_COMMAND_GOALS
   AC_CONFIG_FILES([Makefile])
