@@ -48,6 +48,7 @@
 
   AC_PROG_INSTALL
   AC_PROG_MKDIR_P
+  AC_PROG_LN_S
 
   AC_CONFIG_FILES([Makefile])
   AC_OUTPUT
