@@ -1,5 +1,14 @@
 2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Eliminate redundant configuration files.
+
+	* aclocal.m4 VERSION.m4: Delete them; restore them on demand, via...
+	* Makefile.in ($top_srcdir/../%): ...this symlink dependency rule.
+
+	* configure.ac (AC_PROG_LN_S): Add configuration check.
+
+2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Merge mingwrt-3.22 packaging correction to 5.0-active branch.
 
 2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
